# openamr-platform-sw

./: .gitignore  AUTHORS.md  CONTRIBUTING.md  LICENSE  NOTICE.md  README.md  SECURITY.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yml
config/: README.md
docs/architecture/: 01_repo_layout.md
docs/docking/: README.md
docs/getting_started/: 00_workspace_setup.md  01_quickstart_docking_sim.md
docs/navigation/: README.md
docs/safety/: README.md
docs/simulation/: README.md
ros2/src/openamrobot_bringup/: README.md  package.xml  setup.cfg  setup.py
ros2/src/openamrobot_bringup/launch/: sim_nav.launch.py  sim_only.launch.py
ros2/src/openamrobot_control/: README.md  package.xml  setup.cfg  setup.py
ros2/src/openamrobot_description/: README.md  package.xml  setup.py
ros2/src/openamrobot_description/launch/: launch.py
ros2/src/openamrobot_description/urdf/: gazebo_control.xacro  robo_urdf.urdf.xacro
ros2/src/openamrobot_docking/: CMakeLists.txt  README.md  package.xml
ros2/src/openamrobot_docking/config/: dock_trigger.yaml  tags_36h11.yaml
ros2/src/openamrobot_docking/launch/: apriltag.launch.yml  apriltag_sim.launch.yml  docking_sim.launch.py
ros2/src/openamrobot_docking/models/apriltag_dock/: model.config  model.sdf
ros2/src/openamrobot_docking/scripts/: dock_trigger.py
ros2/src/openamrobot_docking/src/: detected_dock_pose_publisher.cpp
ros2/src/openamrobot_docking/worlds/: docking_scenario.sdf
ros2/src/openamrobot_drivers/: README.md  package.xml  setup.cfg  setup.py
ros2/src/openamrobot_gazebo/: README.md  package.xml  setup.py
ros2/src/openamrobot_gazebo/config/: gz_bridge.yaml
ros2/src/openamrobot_gazebo/launch/: gz_simulator.launch.py
ros2/src/openamrobot_nav2/: README.md  setup.cfg  setup.py
ros2/src/openamrobot_nav2/config/: nav2_params.yaml  slam_toolbox_params.yaml
ros2/src/openamrobot_nav2/launch/: nav2_bringup.launch.py
ros2/src/openamrobot_nav2/rviz/: nav2_default.rviz
ros2/src/openamrobot_perception/: README.md  package.xml  setup.cfg  setup.py
scripts/: kill_sim.sh
simulation/: README.md
tools/: README.md
